--- a/site-info.html
+++ b/site-info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-06-13 Mon 17:54 -->
+<!-- 2022-08-30 Tue 12:02 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Site Info</title>
@@ -13,6 +13,7 @@
 <link rel="stylesheet" type="text/css" href="css/custom.css">
 <link rel="stylesheet" type="text/css" href="css/lib/katex.min.css">
 <script src="js/main.js"></script>
+<script src="js/lib/copy-tex.js"></script>
 </head>
 <body>
 <div id="preamble" class="boilerplate">
@@ -94,14 +95,14 @@ Cloudflare acts as a <a href="https://en.wikipedia.org/wiki/Reverse_proxy">rever
 encryption / decryption with your browser, technically acting as a
 <a href="https://en.wikipedia.org/wiki/Man-in-the-middle_attack">man-in-the-middle</a> for communication with the origin server at <samp>github.io</samp>. The
 lack of end-to-end encryption in this configuration isn&rsquo;t a huge deal since
-Cloudflare performs caching and the <samp>github.io</samp> content is static).
+Cloudflare performs caching and the <samp>github.io</samp> content is static.
 </p>
 
 <p>
 For all intents and purposes, when your browser is communicating with this site,
 it&rsquo;s communicating with Cloudflare. While HTTPS might hide which specific
 interactions with this site from your <a href="https://en.wikipedia.org/wiki/Internet_service_provider">ISP</a>, this does not hinder Cloudflare in
-seeing your specific network requests for the content of this site).
+seeing your specific network requests for the content of this site.
 </p>
 
 <blockquote>
