--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-08-30 Tue 11:49 -->
+<!-- 2022-08-30 Tue 12:05 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Curriculum Vitae</title>
@@ -25,7 +25,7 @@
 <h1 class="title">Curriculum Vitae</h1>
 </header><table><tr><td width="300px"><center>
 
-<figure id="orgea98c4b">
+<figure id="orgb13178c">
 <img src="./img/2022.jpg" alt="2022.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
@@ -411,7 +411,7 @@ Same as above
 <h2 id="Publications">Publications</h2>
 <div class="outline-text-2" id="text-orge996a7b">
 <p>
-<a href="https://arxiv.org/pdf/2206.00129.pdf">Conjugate Natural Selection</a> <br>
+Conjugate Natural Selection <br>
 <strong>Reilly Raab</strong>, Luca de Alfaro, and Yang Liu <br>
 <em>Submitted to Arxiv. (2022)</em>
 </p>
