--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-08-30 Tue 12:05 -->
+<!-- 2022-08-30 Tue 12:07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Curriculum Vitae</title>
@@ -25,7 +25,7 @@
 <h1 class="title">Curriculum Vitae</h1>
 </header><table><tr><td width="300px"><center>
 
-<figure id="orgb13178c">
+<figure id="orgfb46645">
 <img src="./img/2022.jpg" alt="2022.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
@@ -126,8 +126,8 @@ abroad, remotely developing software related to automated circuit design.
 <h2 id="Expertise">Expertise</h2>
 <div class="outline-text-2" id="text-org85843df">
 <ul class="org-ul">
-<li>Multiple programming paradigms (C, Python, JavaScript, Lisp, Haskell, Prolog) <br></li>
-<li>Dynamics, signal-processing, optimization</li>
+<li>Non-linear dynamics, signal-processing, optimization</li>
+<li>Multiple programming paradigms (C, Python, JavaScript, Lisp, Haskell, Prolog, Shell) <br></li>
 </ul>
 </div>
 </div>
