fixed link for arxiv

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-08-30 Tue 12:07 -->
+<!-- 2022-09-01 Thu 09:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Curriculum Vitae</title>
@@ -25,7 +25,7 @@
 <h1 class="title">Curriculum Vitae</h1>
 </header><table><tr><td width="300px"><center>
 
-<figure id="orgfb46645">
+<figure id="orgbc38d54">
 <img src="./img/2022.jpg" alt="2022.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
@@ -411,13 +411,13 @@ Same as above
 <h2 id="Publications">Publications</h2>
 <div class="outline-text-2" id="text-orge996a7b">
 <p>
-Conjugate Natural Selection <br>
+<a href="https://arxiv.org/abs/2208.13898">Conjugate Natural Selection</a> <br>
 <strong>Reilly Raab</strong>, Luca de Alfaro, and Yang Liu <br>
 <em>Submitted to Arxiv. (2022)</em>
 </p>
 
 <p>
-<a href="https://arxiv.org/pdf/2206.00129.pdf">Fairness Transferability Subject to Bounded Distribution Shift</a> <br>
+<a href="https://arxiv.org/abs/2206.00129">Fairness Transferability Subject to Bounded Distribution Shift</a> <br>
 Yatong Chen, <strong>Reilly Raab</strong>, Jialu Wang, and Yang Liu <br>
 <em>Arxiv. Submitted for peer-review. (2022)</em>
 </p>
