--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-01 Thu 09:43 -->
+<!-- 2022-09-01 Thu 09:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Curriculum Vitae</title>
@@ -25,7 +25,7 @@
 <h1 class="title">Curriculum Vitae</h1>
 </header><table><tr><td width="300px"><center>
 
-<figure id="orgbc38d54">
+<figure id="org9887e61">
 <img src="./img/2022.jpg" alt="2022.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
@@ -413,7 +413,7 @@ Same as above
 <p>
 <a href="https://arxiv.org/abs/2208.13898">Conjugate Natural Selection</a> <br>
 <strong>Reilly Raab</strong>, Luca de Alfaro, and Yang Liu <br>
-<em>Submitted to Arxiv. (2022)</em>
+<em>Arxiv. (2022)</em>
 </p>
 
 <p>
