--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-01 Thu 09:44 -->
+<!-- 2022-10-05 Wed 16:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Curriculum Vitae</title>
@@ -25,7 +25,7 @@
 <h1 class="title">Curriculum Vitae</h1>
 </header><table><tr><td width="300px"><center>
 
-<figure id="org9887e61">
+<figure id="orgace7c9f">
 <img src="./img/2022.jpg" alt="2022.jpg">
 
 <figcaption><span class="figure-number">Figure 1: </span>Me (in red).</figcaption>
@@ -217,7 +217,7 @@ Organic semiconductor device fabrication and characterization<br />Surface morph
 </tr>
 <tr>
   <td><div class="cv-block-c">PhD in Computer Science and Engineering</div></td>
-  <td><div class="cv-block-d">Santa Barbara, CA</div></td>
+  <td><div class="cv-block-d">Santa Cruz, CA</div></td>
 </tr>
 </table>
 <div class="cv-bullets">
@@ -419,7 +419,7 @@ Same as above
 <p>
 <a href="https://arxiv.org/abs/2206.00129">Fairness Transferability Subject to Bounded Distribution Shift</a> <br>
 Yatong Chen, <strong>Reilly Raab</strong>, Jialu Wang, and Yang Liu <br>
-<em>Arxiv. Submitted for peer-review. (2022)</em>
+<em>To appear in NeurIPS (2022)</em>
 </p>
 
 <p>
